# AgentSwarm

./: README.md
cost-splitter/: Cargo.toml  abi.json
cost-splitter/src/: lib.rs  main.rs
frontend/: README.md  dist.rar  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AboutSection.tsx  BotAPIDemo.tsx  ContractAddress.tsx  CostSplitterDemo.tsx  EventLog.tsx  PaymentRouterDemo.tsx  WalletButton.tsx
frontend/src/components/ui/: button.tsx
frontend/src/config/: contracts.ts  wagmi.ts
frontend/src/pages/: Index.tsx
payment-router/: .env.example  Cargo.toml  abi.json
payment-router/src/: lib.rs  main.rs
